--- a/script/data-prep-B.Rmd
+++ b/script/data-prep-B.Rmd
@@ -25,6 +25,7 @@ library(dplyr)
 library(haven)
 library(descr)
 library(sjmisc)
+library(stargazer)
 
 ```
 
@@ -39,15 +40,15 @@ d- redistribution
 
 ## Year 1999
 
-### Load data
+### Load data 1999
 
 
 ```{r }
-load("input/data/intermediate/cl99.RData") # cl99
+load("../input/data/intermediate/cl99.RData") # cl99
 ```
 
 
-### a- salaries perceived & just worker & manager
+### a- salaries perceived & just worker & manager 1999
 
 ```{r }
 
@@ -86,13 +87,13 @@ dat99$lngap_just <-  as.numeric(log(dat99$gap_just))                # diferencia
 dim(na.omit(dat99))
 ```
 
-### b - education
+### b - education 1999
 
 ```{r}
 
 # Find vars
 
-find_var(cl99,"degr",search = "all") # v21: perceived worker, v31 just worker
+find_var(cl99,"degr",search = "all") # degree: perceived worker, v31 just worker
 frq(as.factor(cl99$x_degr))
 frq(as.factor(cl99$degree))
 
@@ -118,19 +119,18 @@ frq(as.factor(cl99$degree))
 # dat99$educ_rec[dat99$educ_rec== 3010] <- 3
 # dat99$educ_rec[dat99$educ_rec== 3007] <- 4
 
-cl99 <- cl99 %>% select(degree) %>% mutate(educ_rec=rec(degree,rec = "1:4=1; 5=2 ; 6=3 ; 7=4"))
+edcl99 <- cl99 %>% select(degree) %>% mutate(educ_rec=rec(degree,rec = "1:4=1; 5=2 ; 6=3 ; 7=4"))
 
 names(dat99)
 
-dat99<-cbind(dat99,cl99 %>% select(educ_rec)) # add educ to table
+dat99<-cbind(dat99,edcl99 %>% select(educ_rec)) # add educ to table
 
 summary(dat99)
 
 dat99 %>% group_by(educ_rec) %>% summarize(m=median(gap_perc, na.rm = TRUE))
 ```
 
-### c-income
-
+### c-income 1999
 
 ```{r}
 
@@ -178,7 +178,7 @@ freq( dat99$Quint)
 ```
 
 
-### d - redistribution
+### d - redistribution 1999
 
 ```{r}
 find_var(cl99,"income",search = "all") # v35
@@ -190,280 +190,340 @@ dat99$redis <-rec(dat99$redis, rec="rev")
 freq(dat99$redis)
 dat99$redis <-set_labels(dat99$redis,labels= c("Muy en desacuerdo"=1, "En descacuerdo"=2,"Ni acuerdo ni desacuerdo"=3, "De acuerdo"=4, "Muy de acuerdo"=5))
 get_labels(dat99$redis, values="as.name")
+
+#dummy redis 
+dat99$redis_dummy<-ifelse(dat99$redis>3,1,0)
+dat99$redis_dummy <-set_labels(dat99$redis_dummy,labels= c("En desacuerdo"=0, "De acuerdo"=1))
+freq(dat99$redis_dummy)
+
 freq(to_label(dat99$redis))
 ```
 
 
 ### Save 99 data
-
-
 ```{r}
-save(dat99,file = "input/data/processed/dat99.RData")
-
+save(dat99,file = "../input/data/processed/dat99.RData")
 ```
+
+
 
 ## Year 2009
 
-```{r agno 2009}
+### Load data 2009
+```{r }
+load("../input/data/intermediate/cl09.RData") # cl09
+```
 
-#sjPlot::view_df(cl09, show.frq = T, max.len = 100000)
+### a- salaries perceived & just worker & manager 2009
+```{r }
 
-dat09 <- cl09 %>% dplyr::select(v5,
-                         v23,v25, # Salario percibido obrero y gerente
-                         v28,v30, # Salario justo     obrero y gerente
-                         v33, # redistribucion
-                         cl_degr, #Educacion
-                         cl_inc, #ingreso
-                         v10) # meritocracia
+# Find vars
 
-#--- missing meritocracia -------------------------------------------------#
-# Percepcion
-
-#dat09$cl_inc  <- car::recode(dat09$cl_inc ,"c(9999998, 9999999)=NA",as.numeric = TRUE) # Recodificación missing
-dat09$cl_inc[dat09$cl_inc==9999998]<-NA
-dat09$cl_inc[dat09$cl_inc==9999999]<-NA
-
-#dat09$educ_rec <- car::recode(dat09$educ_rec,"c(99)=NA",as.numeric = TRUE)
-dat09$cl_inc[dat09$cl_inc==99]<-NA
+find_var(cl09,"worker",search = "all") # v25: perceived worker, v30 just worker unrecoded
+find_var(cl09,"chairman",search = "all") # v23: perceived chairman, v28 just chairman unrecoded
 
 
-#dat09$v10 <- car::recode(dat09$v10,"c(8,9)=NA",as.numeric = TRUE)
-dat09$v10[dat09$v10==8]<-NA
-dat09$v10[dat09$v10==9]<-NA
-dat09$v10 <-sjmisc::rec(dat09$v10,rec="rev")# invertir sentido escala
+# Create object with vars & rename
 
+dat09 <- cl09 %>% select(v25,v30,v23,v28) %>% rename(salperger=v23,
+               salperobr=v25,
+               saljusger=v28,
+               saljusobr=v30)
 
-# Redistribucion
-#dat09$v33 <- car::recode(dat09$v33,"c(8,9)=NA",as.numeric = TRUE)
-dat09$v33[dat09$v33==8]<-NA
-dat09$v33[dat09$v33==9]<-NA
+# Recodes
+stargazer(dat09, type="text")
 
-dat09$v33 <- sjmisc::rec(dat09$v33,rec="rev")
-# Estatus subj
+dat09[][dat09  >= 99999999998] <- NA # missings
 
-
-# Rename variables
-
-dat09 <- dplyr::rename(dat09,
-                       pais=v5,
-                salperger=v23,
-                salperobr=v25,
-                saljusger=v28,
-                saljusobr=v30,
-                permer=v10,
-                redis= v33,
-                educ_rec = cl_degr,
-                income = cl_inc)
-
-
-#--- missing brechas -------------------------------------------------#
 dat09 <- dat09 %>%
   mutate(salperobr=replace(salperobr, salperobr <= 40000 | salperobr>= 1000000, NA)) %>%
   mutate(salperger=replace(salperger, salperger <= 250000 | salperger>= 100000001, NA)) %>%
   mutate(saljusobr=replace(saljusobr, saljusobr <= 40000, NA)) %>%
   mutate(saljusger=replace(saljusger, saljusger <= 100000, NA))
+
 #---Brecha salarial percibida
 dat09$gap_perc   <-  as.numeric(dat09$salperger/dat09$salperobr) # diferencia total
-dat09$lngap_perc <-  as.numeric(log(dat09$gap_perc))                # diferencia log
+dat09$lngap_perc <-  as.numeric(log(dat09$gap_perc))                 # diferencia log
+
 #---Brecha salarial justa
 dat09$gap_just   <-  as.numeric(dat09$saljusger/dat09$saljusobr) # diferencia total
 dat09$lngap_just <-  as.numeric(log(dat09$gap_just))                # diferencia log
 dim(na.omit(dat09))
 
-#---Recodificacion Educacion
-
-#dat09 <- mutate(dat09, educ_rec = car::recode(dat09$cl_degr, "0:3 = 1; 4:5 = 2; 7=2; 6 =3;8:9=4"))
-dat09$educ_rec[dat09$educ_rec== 0:3] <- 1
-dat09$educ_rec[dat09$educ_rec== 4:5] <- 2
-dat09$educ_rec[dat09$educ_rec== 7] <- 2
-dat09$educ_rec[dat09$educ_rec== 6] <- 3
-dat09$educ_rec[dat09$educ_rec== 8:9] <- 4
-
-
-#dat09 <- mutate(dat09, income = car::recode(dat09$income, "20000 = 1; 45000 = 2; 66000=3;90000= 4 ;122000 = 5;  155000 = 6; 200000 = 7; 250000 = 8; 310000 = 9; 400000= 10; 750000 = 11; 1500000 = 12; 2500000 = 13; 3100000 = 14" ))
-
-dat09$income[dat09$income== 20000] <- 1
-dat09$income[dat09$income== 45000] <- 2
-dat09$income[dat09$income== 66000] <- 3
-dat09$income[dat09$income== 90000] <- 4
-dat09$income[dat09$income== 122000] <- 5
-dat09$income[dat09$income== 155000] <- 6
-dat09$income[dat09$income== 200000] <- 7
-dat09$income[dat09$income== 250000] <- 8
-dat09$income[dat09$income== 310000] <- 9
-dat09$income[dat09$income== 400000] <- 10
-dat09$income[dat09$income== 750000] <- 11
-dat09$income[dat09$income== 1500000] <-12
-dat09$income[dat09$income== 2500000] <- 13
-dat09$income[dat09$income== 3100000] <- 14
-
-#sjPlot::view_df(dat09, show.frq = T, max.len = 100000)
-
+stargazer(dat09, type="text")
 ```
+
+### b - education 2009
+```{r}
+
+# Find vars
+
+#sjPlot::view_df(cl09, show.frq = T)
+
+find_var(cl09,"degr",search = "all") # cl_degr:
+frq(as.factor(cl09$cl_degr))
+
+# Problema: no se encuentran los codigos originales en codebook, se derivan de la pregunta father education v317, que tiene las 7 categorías unesco asumiendo que las 7 de degree son las mismas:
+
+# 1. None
+# 2. Incomplete primary
+# 3. Primary completed
+# 4. Incomplete secondary (also includes completed qualifications at a level below academic secondary school
+# completion – for example skilled manual qualifications given by trade schools.)
+# 5. Secondary completed
+# 6. Some tertiary education but less than a university Bachelor’s degree (Includes incomplete university. Also
+# includes completed post-secondary courses below university Bachelor’s degree level. Examples are qualifications
+# from US junior college, polytechnical institutes in many countries, and other similar post-secondary education.)
+# 7. University completed (Bachelor’s degree or higher)
+
+# Codificación original Francisco queda stand-by:
+
+# #dat99 <- mutate(dat99, educ_rec = car::recode(dat99$educ, "3001:3004 = 1;  = 2;3008=2; 3010 = 3;3007 = 4"))
+# dat99$educ_rec[dat99$educ_rec== 3001:3004 ] <- 1
+# dat99$educ_rec[dat99$educ_rec== 3005:3006 ] <- 2
+# dat99$educ_rec[dat99$educ_rec== 3008] <- 2
+# dat99$educ_rec[dat99$educ_rec== 3010] <- 3
+# dat99$educ_rec[dat99$educ_rec== 3007] <- 4
+
+edcl09 <- cl09 %>% select(cl_degr) %>% mutate(educ_rec=rec(cl_degr,rec = "1:4=1; 5:6=2; 8=2 ; 9=3 ; 7=4"))
+
+names(edcl09)
+
+dat09<-cbind(dat09,edcl09 %>% select(educ_rec)) # add educ to table
+
+summary(dat09)
+
+dat09 %>% group_by(educ_rec) %>% summarize(m=median(gap_perc, na.rm = TRUE))
+```
+
+
+### c-income 2009
+
+```{r}
+
+find_var(cl09,"income",search = "all") # cl_inc
+
+freq(cl09$cl_inc) # deciles family
+
+
+# take income, impute middle range, then divide by persons in household, then deciles
+
+cl09$income_c= rec(cl09$cl_inc,rec =   
+      "20000=45000;
+      45000=105500;
+      66000=135500;
+      90000=165500;
+      122000=195500;
+      155000=225500;
+      200000=265500;
+      250000=240500;
+      310000=495500;
+      400000=800500;
+      750000=1250000;
+      1500000=1750000;
+      2500000=2500000;
+      3100000=4000000;
+      9999998=NA;
+      9999999=NA")
+
+freq(cl99$income_c) # ok
+
+find_var(cl09,"household",search = "all") # persons in household
+freq(cl09$hompop)
+
+dat09$ingreso_pc= cl09$income_c/cl09$hompop       
+
+# Generar quintiles de ingreso
+
+dat09 %>% mutate(Quint = ntile(ingreso_pc,5)) -> dat09
+
+# Check
+freq( dat09$Quint)
+```
+
+
+### d - redistribution 2009
+
+```{r}
+find_var(cl09,"income",search = "all") # v33
+freq(cl09$v33)
+get_labels(cl09$v33,values = "as.name")
+
+dat09$redis <-rec(cl09$v33, rec="8:9=NA;else=copy")
+dat09$redis <-rec(dat09$redis, rec="rev")
+freq(dat09$redis)
+dat09$redis <-set_labels(dat09$redis,labels= c("Muy en desacuerdo"=1, "En descacuerdo"=2,"Ni acuerdo ni desacuerdo"=3, "De acuerdo"=4, "Muy de acuerdo"=5))
+get_labels(dat09$redis, values="as.name")
+
+#dummy redis 
+dat09$redis_dummy<-ifelse(dat09$redis>3,1,0)
+dat09$redis_dummy <-set_labels(dat09$redis_dummy,labels= c("En desacuerdo"=0, "De acuerdo"=1))
+freq(dat09$redis_dummy)
+```
+
+### Save 09 data
+
+
+```{r}
+save(dat09,file = "../input/data/processed/dat09.RData")
+```
+
+## Year 2019
+
+### Load data 2019
+
+```{r }
+load("../input/data/intermediate/cl19.RData") # cl19
+```
+
+### a- salaries perceived & just worker & manager 2019
 
 ```{r }
 
-#dicotomizar
-#redis
+# Find vars
 
-dat09$redis<-ifelse(dat09$redis>=8,1,0)
+find_var(cl19,"obrero",search = "all") # m2_p2_obrero: perceived worker, m2_p3_obrero: just worker
+find_var(cl19,"presidente",search = "all") # m2_p2_presidente: perceived chairman, m2_p3_presidente: just chairman 
 
+# Create object with vars & rename
 
-######--------#Educación
+dat19 <- cl19 %>% select(m2_p2_presidente,m2_p2_obrero,m2_p3_obrero,m2_p3_presidente) %>% rename(salperger=m2_p2_presidente,
+               salperobr=m2_p2_obrero,
+               saljusger=m2_p3_obrero,
+               saljusobr=m2_p3_presidente)
 
-dat09$universitaria<-ifelse(dat09$educ_rec==4,1,0)
-dat09$tecnico<-ifelse(dat09$educ_rec==3,1,0)
-dat09$media<-ifelse(dat09$educ_rec==2,1,0)
-dat09$basica<-ifelse(dat09$educ_rec==1,1,0)
+# Recodes
 
+stargazer(dat19, type="text")
 
-#permerit
-dat09$permer<-ifelse(dat09$permer>=8,1,0)
+dat19[][dat19  >= 99999999998] <- NA # missings
 
-
-####----#Income
-
-#dat09 <- mutate(dat09, income_rec = car::recode(dat09$income, "1:4 = 1; 5:6 = 2; 7:8=3; 9:10=4; 11=5; 12:14=6"))
-
-dat09$income_rec[dat09$income== 1:4] <- 1
-dat09$income_rec[dat09$income== 5:6] <- 2
-dat09$income_rec[dat09$income== 7:8] <- 3
-dat09$income_rec[dat09$income== 9:10] <- 4
-dat09$income_rec[dat09$income== 11] <- 5
-dat09$income_rec[dat09$income== 12:14] <- 6
-
-dat09$bajo <- ifelse(dat09$income_rec==1,1,0)
-dat09$mediobajo <- ifelse(dat09$income_rec==2,1,0)
-dat09$medio <- ifelse(dat09$income_rec==3,1,0)
-dat09$medioalto <- ifelse(dat09$income_rec==4,1,0)
-dat09$alto <- ifelse(dat09$income_rec==5,1,0)
-dat09$muyalto <- ifelse(dat09$income_rec==6,1,0)
-
-
-hist(dat09$redis)
-```
-
-```{r agno 2019}
-
-dat19 <- cl19 %>% dplyr::select(m2_p2_presidente,m2_p2_obrero,  # Salario percibio obrero y gerente
-                         m2_p3_presidente,m2_p3_obrero,  # Salario justo    obrero y gerente
-                         m2_p4_2, # redistribucion
-                         m2_p13a, #Estatus subjetivo
-                         ds_p4, # Educacion
-                         ds_p39, #ingreso
-                           m2_p1_5) # meritocracia
-#--- missing meritocracia -------------------------------------------------#
-# Percepcion
-
-#dat19$ds_p39  <- car::recode(dat19$ds_p39 ,"c(88, 99)=NA",as.numeric = TRUE) # Recodificación missing
-dat19$ds_p39[dat19$ds_p39==88]<-NA
-dat19$ds_p39[dat19$ds_p39==99]<-NA
-
-#dat19$m2_p1_5  <- car::recode(dat19$m2_p1_5  ,"c(8,9)=NA",as.numeric = TRUE)
-dat19$m2_p1_5[dat19$m2_p1_5==8]<-NA
-dat19$m2_p1_5[dat19$m2_p1_5==9]<-NA
-dat19$m2_p1_5  <-sjmisc::rec(dat19$m2_p1_5 ,rec="rev")# invertir sentido escala
-
-#dat19$educ_rec <- car::recode(dat19$educ,"c(99)=NA",as.numeric = TRUE)
-dat19$ds_p4[dat19$ds_p4==99]<-NA
-
-#Redistribucion
-#dat19$m2_p4_2 <- car::recode(dat19$m2_p4_2 ,"c(8,9)=NA",as.numeric = TRUE)
-dat19$m2_p4_2[dat19$m2_p4_2==8]<-NA
-dat19$m2_p4_2[dat19$m2_p4_2==9]<-NA
-dat19$m2_p4_2  <-sjmisc::rec(dat19$m2_p4_2 ,rec="rev")# invertir sentido escala
-
-
-# Rename variables
-dat19 <- dplyr::rename(dat19,
-                salperger=m2_p2_presidente,
-                salperobr=m2_p2_obrero,
-                saljusger=m2_p3_presidente,
-                saljusobr=m2_p3_obrero,
-
-                permerit=m2_p1_5 ,
-
-                redis = m2_p4_2,
-
-                income = ds_p39,
-                educ_rec=ds_p4)
-#--- missing brechas -------------------------------------------------#
 dat19 <- dat19 %>%
   mutate(salperobr=replace(salperobr, salperobr <= 40000 | salperobr>= 1000000, NA)) %>%
   mutate(salperger=replace(salperger, salperger <= 250000 | salperger>= 100000001, NA)) %>%
   mutate(saljusobr=replace(saljusobr, saljusobr <= 40000, NA)) %>%
   mutate(saljusger=replace(saljusger, saljusger <= 100000, NA))
+
 #---Brecha salarial percibida
 dat19$gap_perc   <-  as.numeric(dat19$salperger/dat19$salperobr) # diferencia total
-dat19$lngap_perc <-  as.numeric(log(dat19$gap_perc))                  # diferencia log
+dat19$lngap_perc <-  as.numeric(log(dat19$gap_perc))                 # diferencia log
+
 #---Brecha salarial justa
 dat19$gap_just   <-  as.numeric(dat19$saljusger/dat19$saljusobr) # diferencia total
 dat19$lngap_just <-  as.numeric(log(dat19$gap_just))                # diferencia log
-
-#----Educ_rec
-#dat19 <- mutate(dat19, educ_rec = car::recode(dat19$educ, "0:3 = 1; 4:5 = 2; 7=2; 6 =3;8:9=4"))
-
-dat19$educ_rec[dat19$educ_rec== 0:3] <- 1
-dat19$educ_rec[dat19$educ_rec== 4:5] <- 2
-dat19$educ_rec[dat19$educ_rec== 7] <- 2
-dat19$educ_rec[dat19$educ_rec== 6] <- 3
-dat19$educ_rec[dat19$educ_rec== 8:9] <- 4
-
-table(dat19$salperobr)
-
-#sjPlot::view_df(dat19, show.frq = T, max.len = 10000)
+dim(na.omit(dat19))
 ```
 
-```{r }
-## dummy
-
-#redis
-dat19$redis<-ifelse(dat19$redis>=8,1,0)
-hist(dat19$redis)
-
-######--------#Educación
-dat19$universitaria<-ifelse(dat19$educ_rec==4,1,0)
-dat19$tecnico<-ifelse(dat19$educ_rec==3,1,0)
-dat19$media<-ifelse(dat19$educ_rec==2,1,0)
-dat19$basica<-ifelse(dat19$educ_rec==1,1,0)
-
-#basica de referencia
-#permerit
-dat19$permer<-ifelse(dat19$permerit>=8,1,0)
-hist(dat19$permer)
-
-####----#Income
-
-#dat19 <- mutate(dat19, income_rec = car::recode(dat19$income, "1:4 = 1; 5:6 = 2; 7:8=3; 9:10=4; 11=5; 12:14=6"))
-
-dat19$income_rec[dat19$income== 1:4] <- 1
-dat19$income_rec[dat19$income== 5:6] <- 2
-dat19$income_rec[dat19$income== 7:8] <- 3
-dat19$income_rec[dat19$income== 9:10] <- 4
-dat19$income_rec[dat19$income== 11] <- 5
-dat19$income_rec[dat19$income== 12:14] <- 6
-
-dat19$bajo <- ifelse(dat19$income_rec==1,1,0)
-dat19$mediobajo <- ifelse(dat19$income_rec==2,1,0)
-dat19$medio <- ifelse(dat19$income_rec==3,1,0)
-dat19$medioalto <- ifelse(dat19$income_rec==4,1,0)
-dat19$alto <- ifelse(dat19$income_rec==5,1,0)
-dat19$muyalto <- ifelse(dat19$income_rec==6,1,0)
-```
-
+### b - education 2019
 
 ```{r}
-dat99$year <- 1999
-dat09$year <- 2009
-dat19$year <- 2019
-clw3<- bind_rows(dat99,dat09)
-clw3<- bind_rows(clw3,dat19)
-clw3 <- clw3 %>%  select(year,"salperobr","salperger","saljusobr","saljusger","gap_perc","lngap_perc","gap_just","lngap_just", "educ_rec", "income", everything())
-save(clw3,file = "../input/data/dataproc/issp9919.RData")
-save(dat99,file = "../input/data/dataproc/dat99.RData")
-save(dat09,file = "../input/data/dataproc/dat09.RData")
-save(dat19,file = "../input/data/dataproc/dat19.RData")
+# Find vars
+
+find_var(cl19,"Educ",search = "all") # ds_p4:
+frq(as.factor(cl19$ds_p4))
+
+# Problema: no se encuentran los codigos originales en codebook, se derivan de la pregunta father education v317, que tiene las 7 categorías unesco asumiendo que las 7 de degree son las mismas:
+
+# 1. None
+# 2. Incomplete primary
+# 3. Primary completed
+# 4. Incomplete secondary (also includes completed qualifications at a level below academic secondary school
+# completion – for example skilled manual qualifications given by trade schools.)
+# 5. Secondary completed
+# 6. Some tertiary education but less than a university Bachelor’s degree (Includes incomplete university. Also
+# includes completed post-secondary courses below university Bachelor’s degree level. Examples are qualifications
+# from US junior college, polytechnical institutes in many countries, and other similar post-secondary education.)
+# 7. University completed (Bachelor’s degree or higher)
+
+# Codificación original Francisco queda stand-by:
+
+# #dat99 <- mutate(dat99, educ_rec = car::recode(dat99$educ, "3001:3004 = 1;  = 2;3008=2; 3010 = 3;3007 = 4"))
+# dat99$educ_rec[dat99$educ_rec== 3001:3004 ] <- 1
+# dat99$educ_rec[dat99$educ_rec== 3005:3006 ] <- 2
+# dat99$educ_rec[dat99$educ_rec== 3008] <- 2
+# dat99$educ_rec[dat99$educ_rec== 3010] <- 3
+# dat99$educ_rec[dat99$educ_rec== 3007] <- 4
+
+edcl19 <- cl19 %>% select(ds_p4) %>% mutate(educ_rec=rec(ds_p4,rec = "0:3=1; 4:5=2 ;7=2 ; 6=3 ; 8:9=4"))
+
+dat19<-cbind(dat19,edcl19 %>% select(educ_rec)) # add educ to table
+
+summary(dat19)
+table(dat19$educ_rec)
+
+dat19 %>% group_by(educ_rec) %>% summarize(m=median(gap_perc, na.rm = TRUE))
 ```
+
+### c-income 2019
+
+```{r}
+
+find_var(cl19,"este hogar",search = "all") # ds_p39: perceived worker, v31 just worker
+
+freq(cl19$ds_p39) # deciles family
+
+# take income, impute middle range, then divide by persons in household, then deciles
+
+cl19$income_c= rec(cl19$ds_p39,rec =   
+      "1=45000;
+      2=105500;
+      3=135500;
+      4=165500;
+      5=195500;
+      6=225500;
+      7=265500;
+      8=240500;
+      9=495500;
+      10=800500;
+      11=1250000;
+      12=1750000;
+      13=2500000;
+      14=4000000;
+      88=NA;
+      99=NA")
+
+freq(cl19$income_c) # ok
+
+find_var(cl19,"viven",search = "all") # ds_p34
+freq(cl19$ds_p34)
+
+dat19$ingreso_pc= cl19$income_c/cl19$ds_p34       
+
+# Generar quintiles de ingreso
+
+dat19 %>% mutate(Quint = ntile(ingreso_pc,5)) -> dat19
+
+# Check
+freq( dat19$Quint)
+```
+
+### d - redistribution 2019
+
+```{r}
+find_var(cl19,"responsabilidad",search = "all") # m2_p4_2 
+freq(cl19$m2_p4_2 )
+get_labels(cl19$m2_p4_2 ,values = "as.name")
+
+dat19$redis <-rec(cl19$m2_p4_2, rec="8:9=NA;else=copy")
+dat19$redis <-rec(dat19$redis, rec="rev")
+freq(dat99$redis)
+dat19$redis <-set_labels(dat19$redis,labels= c("Muy en desacuerdo"=1, "En descacuerdo"=2,"Ni acuerdo ni desacuerdo"=3, "De acuerdo"=4, "Muy de acuerdo"=5))
+get_labels(dat19$redis, values="as.name")
+
+#dummy redis 
+dat19$redis_dummy<-ifelse(dat19$redis>3,1,0)
+dat19$redis_dummy <-set_labels(dat19$redis_dummy,labels= c("En desacuerdo"=0, "De acuerdo"=1))
+freq(dat99$redis_dummy)
+
+freq(to_label(dat99$redis))
+```
+
+### Save 19 data
+```{r}
+save(dat19,file = "../input/data/processed/dat19.RData")
+```
+
+
 
 # tratamiento CASEN 2000-2017
 
