--- a/paper.Rmd
+++ b/paper.Rmd
@@ -78,8 +78,17 @@ En general las teorías respecto a los determinantes de las preferencias conside
 
 # Datos, variables y métodos
 
+_Datos_
+
 - por elaborar, Francisco - tomar como referencia @castillo_inequality_2012]
+
 - incluir tabla descriptivos (`stargazer`)
+
+
+<object width="800" height="800" data="output/tables/desc.html"></object>
+
+
+
 
 
 # Resultados
